Added CSS to index.html

--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html ng-app="todoApp">
+<html ng-app="registrationApp">
 	<head>
 		<meta charset="ISO-8859-1">
-		<title>Insert title here</title>
+		<title>EVENT MANAGEMENT SYSTEM</title>
 		
-			<!-- SCROLLS -->
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+		<!-- SCROLLS -->
+		<!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" /> -->
+		<!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" /> -->
+		<link rel="stylesheet" type="text/css" href="../css/SogetiStyle.css">
 		
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+		
+		<!-- SPELLS -->
 		<!-- <script src="js/angular.min.js"></script> -->
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 		<script src="scripts/app.js"></script>
 		
@@ -21,7 +24,6 @@
 	</head>
 	<body>
 
-<!-- SPELLS -->
 		
 		
 	
