--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -7,7 +7,8 @@
 			<!-- SCROLLS -->
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
-		
+
+        <script src="js/moment.min.js" type="text/javascript" />
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
 		<!-- <script src="js/angular.min.js"></script> -->
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
