--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="todoApp">
+<html ng-app="registrationApp">
 	<head>
 		<meta charset="ISO-8859-1">
 		<title>Insert title here</title>
@@ -8,17 +8,15 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
 
-        <script src="js/moment.min.js" type="text/javascript" />
+
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-		<!-- <script src="js/angular.min.js"></script> -->
+
+		<!--<script src="js/angular.min.js"></script>-->
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+       <!-- <script src="js/moment.min.js" type="text/javascript" /> -->
 		<script src="scripts/app.js"></script>
-		
-		<style type="text/css">
-		ul {
-			list-style: none;
-		}
-		</style>
+
+
 	</head>
 	<body>
 
