Getting Controller functionality to work.

--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<html ng-app="registrationApp">
-	<head>
-		<meta charset="ISO-8859-1">
-		<title>Insert title here</title>
-		
-			<!-- SCROLLS -->
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+<html ng-app="app.user">
+<head>
+    <meta charset="ISO-8859-1">
+    <title>Insert title here</title>
+
+    <!-- SCROLLS -->
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
 
 
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-
-		<!--<script src="js/angular.min.js"></script>-->
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-       <!-- <script src="js/moment.min.js" type="text/javascript" /> -->
-		<script src="scripts/app.js"></script>
 
 
-	</head>
-	<body>
+
+</head>
+<body>
 
 <!-- SPELLS -->
-		
-		
-	
 
-<div id="main">
-		<div class="container">
-			<div ng-view></div>
-		</div>
-</div>
+    <div id="main">
+        <div class="container">
+            <div ng-view></div>
+        </div>
+    </div>
 
-	</body>
+    <!--Scripts-->
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+
+    <!--<script src="js/angular.min.js"></script>-->
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+    <!-- <script src="js/moment.min.js" type="text/javascript" /> -->
+    <!--<script src="scripts/app.js"></script>-->
+<script src="scripts/user/controllers.js"></script>
+
+</body>
 </html>
