--- a/Source/src/main/webapp/testIndex.html
+++ b/Source/src/main/webapp/testIndex.html
@@ -40,7 +40,7 @@ ul {
 
 				<!-- INSERT TEST CODE HERE -->
 
-				<table class="table table-striped">
+				<table class="table table-condensed table-striped">
 					<thead>
 						<tr>
 							<td><label for="email">Email address</label></td>
