--- a/Source/src/main/webapp/testIndex.html
+++ b/Source/src/main/webapp/testIndex.html
@@ -5,7 +5,8 @@
 <title>EVENT MANAGEMENT SYSTEM</title>
 
 <!-- SCROLLS -->
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+<link rel="stylesheet"
+	href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 <!-- <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" /> -->
 <link rel="stylesheet" type="text/css" href="css/SogetiStyle.css">
 
@@ -35,8 +36,8 @@ ul {
 
 	<div id="main">
 		<div class="container">
-		<div class="row">
-			
+			<div class="row">
+
 
 				<!-- INSERT TEST CODE HERE -->
 
@@ -136,13 +137,13 @@ ul {
 				<!-- END TEST CODE -->
 
 			</div>
-		
+
 		</div>
 	</div>
-	
-			<script
-				src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-			<script
-				src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script
+		src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
 </html>
