--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html ng-app="app.user">
+<html ng-app="Registration">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Insert title here</title>
+    <title>Sogeti Registration</title>
 
     <!-- SCROLLS -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
@@ -28,7 +28,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
     <!-- <script src="js/moment.min.js" type="text/javascript" /> -->
     <!--<script src="scripts/app.js"></script>-->
-<script src="scripts/user/controllers.js"></script>
+<!-- <script src="scripts/user/controllers.js"></script> -->
 
 </body>
 </html>
