--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app.user">
+<html ng-app="Registration">
 <head>
     <meta charset="ISO-8859-1">
     <title>Insert title here</title>
