--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -28,7 +28,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
     <!-- <script src="js/moment.min.js" type="text/javascript" /> -->
     <!--<script src="scripts/app.js"></script>-->
-<!-- <script src="scripts/user/controllers.js"></script> -->
+ <script src="scripts/user/controllers.js"></script>
 
 </body>
 </html>
