--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -18,6 +18,7 @@
     <!-- <script src="js/moment.min.js" type="text/javascript" /> -->
     <!--<script src="scripts/app.js"></script>-->
     <script src="scripts/user/controllers.js"></script>
+    <script src="scripts/event/controllers.js"></script>
 
 </head>
 <body>
