Deleted unnecessary files

--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html ng-app="Registration">
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Sogeti Registration</title>
+<meta charset="ISO-8859-1">
+<title>Sogeti Event Management</title>
 
-    <!-- SCROLLS -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+<!-- SCROLLS -->
+<link rel="stylesheet"
+	href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+<link rel="stylesheet"
+	href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
 
 
 
-    <!--Scripts-->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+<!--Scripts-->
+<script
+	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
 
-    <!--<script src="js/angular.min.js"></script>-->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-    <!-- <script src="js/moment.min.js" type="text/javascript" /> -->
-    <!--<script src="scripts/app.js"></script>-->
-    <script src="scripts/user/controllers.js"></script>
-    <script src="scripts/event/controllers.js"></script>
+<!--<script src="js/angular.min.js"></script>-->
+<script
+	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+<!-- <script src="js/moment.min.js" type="text/javascript" /> -->
+<!--<script src="scripts/app.js"></script>-->
+<script src="scripts/user/controllers.js"></script>
+<script src="scripts/event/controllers.js"></script>
 
 </head>
 <body>
 
-    <div id="main">
-        <div class="container">
-            <div ng-view></div>
-        </div>
-    </div>
+	<div id="main">
+		<div class="container">
+			<div ng-view></div>
+		</div>
+	</div>
 
 
 
