--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html ng-app="Registration">
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Sogeti Registration</title>
+<meta charset="ISO-8859-1">
+<title>Sogeti Event Management</title>
 
-    <!-- SCROLLS -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+<!-- SCROLLS -->
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="css/SogetiStyle.css">
+
+<!-- SPELLS -->
+<script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+<script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 
 
-
-    <!--Scripts-->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
 
     <!--<script src="js/angular.min.js"></script>-->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
@@ -20,24 +21,54 @@
     <script src="scripts/user/controllers.js"></script>
     <script src="scripts/events/controllers.js"></script>
 
-<!-- MAY NOT BE NEEDED -->
-<style type="text/css">
-ul {
-	list-style: none;
-}
-</style>
-<!-- BUT LEAVE FOR NOW -->
 
 </head>
 <body>
 
-    <div id="main">
-        <div class="container">
-            <div ng-view></div>
-        </div>
-    </div>
+<!-- SOGETI LOGO -->
+	<div>
+		<a href="http://www.sogeti.com/"><img
+			src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo" /></a>
+	</div>
+<!-- END LOGO -->
 
+	<!-- NAVBAR -->
+	<div class="row">
+		<div class="col-sm-3">
+			<div class="sidebar-nav">
+				<div class="navbar navbar-default" role="navigation">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle="collapse"
+							data-target=".sidebar-navbar-collapse">
+							<span class="sr-only">Toggle navigation</span> <span
+								class="icon-bar"></span> <span class="icon-bar"></span> <span
+								class="icon-bar"></span>
+						</button>
+						<span class="visible-xs navbar-brand">Sogeti Event
+							Management System</span>
+					</div>
+					<div class="navbar-collapse collapse sidebar-navbar-collapse">
+						<ul class="nav navbar-nav">
+							<li class="active"><a href="#">Home</a></li>
+							<li><a href="#">Search Events</a></li>
+							<li><a href="/myevents">My Events</a></li>
+							<li><a href="#">Schedule Event</a></li>
+							<li><a href="#">Update Profile</a></li>
+						</ul>
+					</div>
+					<!--/.nav-collapse -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- END NAVBAR -->
 
+	<!-- MAIN CONTENT IS INJECTED INTO ng-view  -->
+	<div id="main">
+		<div class="container">
+			<div ng-view></div>
+		</div>
+	</div>
 
 </body>
 </html>
