--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -12,15 +12,19 @@
 <script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
 <script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 
+<script src="scripts/user/controllers.js"></script>
+<script src="scripts/event/controllers.js"></script>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-    <!--<script src="js/angular.min.js"></script>-->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-    <!-- <script src="js/moment.min.js" type="text/javascript" /> -->
-    <!--<script src="scripts/app.js"></script>-->
-    <script src="scripts/user/controllers.js"></script>
-    <script src="scripts/events/controllers.js"></script>
-
+<!-- MAY NOT BE NEEDED -->
+<style type="text/css">
+ul {
+	list-style: none;
+}
+</style>
+<!-- BUT LEAVE FOR NOW -->
 
 </head>
 <body>
@@ -51,7 +55,7 @@
 						<ul class="nav navbar-nav">
 							<li class="active"><a href="#">Home</a></li>
 							<li><a href="#">Search Events</a></li>
-							<li><a href="/myevents">My Events</a></li>
+							<li><a href="#">My Events</a></li>
 							<li><a href="#">Schedule Event</a></li>
 							<li><a href="#">Update Profile</a></li>
 						</ul>
