--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -4,19 +4,7 @@
 <meta charset="ISO-8859-1">
 <title>Sogeti Event Management</title>
 
-<!-- SCROLLS -->
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="css/SogetiStyle.css">
 
-<!-- SPELLS -->
-<script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-<script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-
-<script src="scripts/user/controllers.js"></script>
-<script src="scripts/event/controllers.js"></script>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 <!-- MAY NOT BE NEEDED -->
 <style type="text/css">
@@ -73,6 +61,18 @@ ul {
 			<div ng-view></div>
 		</div>
 	</div>
+<!-- SCROLLS -->
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="css/SogetiStyle.css">
 
+<!-- SPELLS -->
+<script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+<script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+
+<script src="scripts/user/controllers.js"></script>
+<!--<script src="scripts/events/controllers.js"></script>-->
+
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
+<!--<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
 </body>
 </html>
