--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -31,13 +31,16 @@ ul {
 
 <!-- SOGETI LOGO -->
 	<div>
+	<h1>
 		<a href="http://www.sogeti.com/"><img
 			src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo" /></a>
+			</h1>
 	</div>
 <!-- END LOGO -->
 
 	<!-- NAVBAR -->
 	<div class="row">
+	<!-- END MAIN CONTENT -->
 		<div class="col-sm-3">
 			<div class="sidebar-nav">
 				<div class="navbar navbar-default" role="navigation">
@@ -64,15 +67,15 @@ ul {
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- END NAVBAR -->
-
-	<!-- MAIN CONTENT IS INJECTED INTO ng-view  -->
-	<div id="main">
+		<!-- MAIN CONTENT IS INJECTED INTO ng-view  -->
+	<div class="col-sm-6" id="main">
 		<div class="container">
 			<div ng-view></div>
 		</div>
 	</div>
+	</div>
+	<!-- END NAVBAR -->
+
 
 </body>
 </html>
