Final commit of the night

--- a/Source/src/main/webapp/testIndex.html
+++ b/Source/src/main/webapp/testIndex.html
@@ -30,6 +30,15 @@ ul {
 </head>
 <body>
 
+	<!-- SOGETI LOGO -->
+	<div>
+		<h1>
+			<a href="http://www.sogeti.com/"><img
+				src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo" /></a>
+		</h1>
+	</div>
+	<!-- END LOGO -->
+
 	<!-- NAVBAR -->
 
 	<div class="row">
