--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -12,14 +12,26 @@
 <script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
 <script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 
+    <style type="text/css">
+        @font-face {
+            font-family: 'Glyphicons Halflings';
+            src: url('fonts/glyphicons-halflings-regular.eot');
+            src: url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
+            url('fonts/glyphicons-halflings-regular.woff') format('woff'),
+            url('fonts/glyphicons-halflings-regular.ttf') format('truetype'),
+            url('fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+        }
+    </style>
 
 
     <!--<script src="js/angular.min.js"></script>-->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-    <!-- <script src="js/moment.min.js" type="text/javascript" /> -->
+    <script src="js/moment.min.js" />
+    <script src="js/datetimepickerDirective.js" />
     <!--<script src="scripts/app.js"></script>-->
     <script src="scripts/user/controllers.js"></script>
     <script src="scripts/events/controllers.js"></script>
+
 
 
 </head>
