--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -1,90 +1,75 @@
 <!DOCTYPE html>
 <html ng-app="Registration">
 <head>
-<meta charset="ISO-8859-1">
-<title>Sogeti Event Management</title>
+    <meta charset="ISO-8859-1">
+    <title>Sogeti Event Management</title>
 
-<!-- SCROLLS -->
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="css/SogetiStyle.css">
+    <!-- SCROLLS -->
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/SogetiStyle.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css" />
 
-<!-- SPELLS -->
-<script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-<script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-
-    <style type="text/css">
-        @font-face {
-            font-family: 'Glyphicons Halflings';
-            src: url('fonts/glyphicons-halflings-regular.eot');
-            src: url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
-            url('fonts/glyphicons-halflings-regular.woff') format('woff'),
-            url('fonts/glyphicons-halflings-regular.ttf') format('truetype'),
-            url('fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
-        }
-    </style>
-
-
-    <!--<script src="js/angular.min.js"></script>-->
+    <!-- SPELLS -->
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-    <script src="js/moment.min.js" />
-    <script src="js/datetimepickerDirective.js" />
-    <!--<script src="scripts/app.js"></script>-->
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/moment.min.js"></script>
+    <script src="js/datetimepickerDirective.js"></script>
     <script src="scripts/user/controllers.js"></script>
     <script src="scripts/events/controllers.js"></script>
-
-
 
 </head>
 <body>
 
 <!-- SOGETI LOGO -->
-	<div>
-	<h1>
-		<a href="http://www.sogeti.com/"><img
-			src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo" /></a>
-			</h1>
-	</div>
+<div>
+    <h1>
+        <a href="http://www.sogeti.com/"><img
+                src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo"/></a>
+    </h1>
+</div>
 <!-- END LOGO -->
 
-	<!-- NAVBAR -->
-	<div class="row">
-		<div class="col-sm-3">
-			<div class="sidebar-nav">
-				<div class="navbar navbar-default" role="navigation">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse"
-							data-target=".sidebar-navbar-collapse">
-							<span class="sr-only">Toggle navigation</span> <span
-								class="icon-bar"></span> <span class="icon-bar"></span> <span
-								class="icon-bar"></span>
-						</button>
+<!-- NAVBAR -->
+<div class="row">
+    <div class="col-sm-3">
+        <div class="sidebar-nav">
+            <div class="navbar navbar-default" role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse"
+                            data-target=".sidebar-navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span> <span
+                            class="icon-bar"></span> <span class="icon-bar"></span> <span
+                            class="icon-bar"></span>
+                    </button>
 						<span class="visible-xs navbar-brand">Sogeti Event
 							Management System</span>
-					</div>
-					<div class="navbar-collapse collapse sidebar-navbar-collapse">
-						<ul class="nav navbar-nav">
-							<li class="active"><a href="#">Home</a></li>
-							<li><a href="#">Search Events</a></li>
-							<li><a href="/myevents">My Events</a></li>
-							<li><a href="#">Schedule Event</a></li>
-							<li><a href="#">Update Profile</a></li>
-						</ul>
-					</div>
-					<!--/.nav-collapse -->
-				</div>
-			</div>
-		</div>
-		<!-- MAIN CONTENT IS INJECTED INTO ng-view  -->
-	<div class="col-sm-6" id="main">
-		<div class="container">
-			<div ng-view></div>
-		</div>
-	</div>
-	<!-- END MAIN CONTENT -->
+                </div>
+                <div class="navbar-collapse collapse sidebar-navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">Search Events</a></li>
+                        <li><a href="/Registration/#/myevents">My Events</a></li>
+                        <li><a href="/Registration/#/event/new">Schedule Event</a></li>
+                        <li><a href="#">Update Profile</a></li>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+        </div>
+    </div>
+    <!-- MAIN CONTENT IS INJECTED INTO ng-view  -->
+    <div class="col-sm-6" id="main">
+        <div class="container">
+            <div ng-view></div>
+        </div>
+    </div>
+    <!-- END MAIN CONTENT -->
 
-	</div>
-	<!-- END NAVBAR -->
-
+</div>
+<!-- END NAVBAR -->
 
 
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
