Used app.js for main route configuration. Starting to tie together controllers.

--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="Registration">
+<html ng-app="app">
 <head>
     <meta charset="ISO-8859-1">
     <title>Sogeti Event Management</title>
@@ -17,7 +17,10 @@
     <script src="js/bootstrap.js"></script>
     <script src="js/moment.min.js"></script>
     <script src="js/datetimepickerDirective.js"></script>
+
+    <script src="scripts/app.js"></script>
     <script src="scripts/user/controllers.js"></script>
+
     <script src="scripts/events/controllers.js"></script>
 
 </head>
