--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -23,21 +23,25 @@
 
     <script src="scripts/events/controllers.js"></script>
 
+    <script type="text/javascript">
+        $(document).ready(function() {
+
+            $('.sogetiLogo').addClass('pull-left');
+        });
+    </script>
+
 </head>
 <body>
 
-<!-- SOGETI LOGO -->
-<div>
-    <h1>
-        <a href="http://www.sogeti.com/"><img
-                src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo"/></a>
-    </h1>
-</div>
-<!-- END LOGO -->
+
+
+
 
 <!-- NAVBAR -->
+
 <div class="row">
     <div class="col-sm-3">
+        <img class = "visible-sm visible-md visible-lg" src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo" style="width:100%"/>
         <div class="sidebar-nav">
             <div class="navbar navbar-default" role="navigation">
                 <div class="navbar-header">
@@ -47,8 +51,7 @@
                             class="icon-bar"></span> <span class="icon-bar"></span> <span
                             class="icon-bar"></span>
                     </button>
-						<span class="visible-xs navbar-brand">Sogeti Event
-							Management System</span>
+						<span class="visible-xs navbar-brand">Sogeti EventManagement System</span>
                 </div>
                 <div class="navbar-collapse collapse sidebar-navbar-collapse">
                     <ul class="nav navbar-nav">
@@ -64,14 +67,18 @@
         </div>
     </div>
     <!-- MAIN CONTENT IS INJECTED INTO ng-view  -->
-    <div class="col-sm-6" id="main">
-        <div class="container">
-            <div ng-view></div>
+    <div class="container" >
+
+        <div class="col-sm-6 col-sm-offset-3" id="main">
+            <h1>Event Management System</h1>
+                <div ng-view></div>
+
         </div>
     </div>
-    <!-- END MAIN CONTENT -->
 
+    <!-- END MAIN CONTENT -->
 </div>
+
 <!-- END NAVBAR -->
 
 
