--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -41,7 +41,7 @@
 
 <div class="row">
     <div class="col-sm-3">
-        <img class = "visible-sm visible-md visible-lg" src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo" style="width:100%"/>
+        <a href="http://www.sogeti.com/"><img class = "visible-sm visible-md visible-lg" src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo" style="width:100%"/></a>
         <div class="sidebar-nav">
             <div class="navbar navbar-default" role="navigation">
                 <div class="navbar-header">
