Adding event list styling

--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css" />
     <link rel="stylesheet" type="text/css" href="css/SogetiStyle.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <!-- SPELLS -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/moment.min.js"></script>
@@ -65,16 +66,15 @@
                 <!--/.nav-collapse -->
             </div>
         </div>
+
     </div>
     <!-- MAIN CONTENT IS INJECTED INTO ng-view  -->
-    <div class="container" >
-
-        <div class="col-sm-6 col-sm-offset-3" id="main">
-            <h1>Event Management System</h1>
-                <div ng-view></div>
-
-        </div>
+    <div class="col-sm-8">
+        <h1>Event Management System</h1>
+        <div ng-view ></div>
     </div>
+
+
 
     <!-- END MAIN CONTENT -->
 </div>
@@ -82,7 +82,7 @@
 <!-- END NAVBAR -->
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
 </html>
