Changed edit event to be a table view

--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -56,11 +56,11 @@
                 </div>
                 <div class="navbar-collapse collapse sidebar-navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">Search Events</a></li>
-                        <li><a href="/Registration/#/myevents">My Events</a></li>
-                        <li><a href="/Registration/#/event/new">Schedule Event</a></li>
-                        <li><a href="#">Update Profile</a></li>
+                        <li class="{{pageConfig.homeActive}}"><a href="#">Home</a></li>
+                        <li class="{{pageConfig.searchActive}}"><a href="#">Search Events</a></li>
+                        <li class="{{pageConfig.myEventsActive}}"><a href="/Registration/#/myevents">My Events</a></li>
+                        <li class="{{pageConfig.newEventActive}}"><a href="/Registration/#/event/new">Schedule Event</a></li>
+                        <li class="{{pageConfig.updateProfileActive}}"><a href="/Registration/#/user/edit/1">Update Profile</a></li>
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
