--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -34,15 +34,15 @@
 </head>
 <body>
 
-
-
-
-
 <!-- NAVBAR -->
 
+<div class="sogetiBanner ">
+    <img class = "visible-sm visible-md visible-lg" src="img/logo.png" alt="Sogeti Logo"/>
+</div>
 <div class="row">
+
     <div class="col-sm-3">
-        <a href="http://www.sogeti.com/"><img class = "visible-sm visible-md visible-lg" src="http://www.sogeti.com/Static/img/logo.png" alt="Sogeti Logo" style="width:100%"/></a>
+
         <div class="sidebar-nav">
             <div class="navbar navbar-default" role="navigation">
                 <div class="navbar-header">
@@ -52,15 +52,15 @@
                             class="icon-bar"></span> <span class="icon-bar"></span> <span
                             class="icon-bar"></span>
                     </button>
-						<span class="visible-xs navbar-brand">Sogeti EventManagement System</span>
+						<span class="visible-xs navbar-brand">Sogeti Event Management System</span>
                 </div>
                 <div class="navbar-collapse collapse sidebar-navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">Search Events</a></li>
                         <li><a href="/Registration/#/myevents">My Events</a></li>
+                        <li><a href="#">Search Events</a></li>
                         <li><a href="/Registration/#/event/new">Schedule Event</a></li>
                         <li><a href="#">Update Profile</a></li>
+                        <li><a href="#">Logout</a></li>
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
@@ -70,7 +70,7 @@
     </div>
     <!-- MAIN CONTENT IS INJECTED INTO ng-view  -->
     <div class="col-sm-8">
-        <h1>Event Management System</h1>
+
         <div ng-view ></div>
     </div>
 
