Fixed a few layout issues

--- a/Source/src/main/webapp/index.html
+++ b/Source/src/main/webapp/index.html
@@ -59,7 +59,7 @@
                         <li><a href="/Registration/#/myevents">My Events</a></li>
                         <li><a href="#">Search Events</a></li>
                         <li><a href="/Registration/#/event/new">Schedule Event</a></li>
-                        <li><a href="#">Update Profile</a></li>
+                        <li><a href="/Registration/#/user/edit/1">Update Profile</a></li>
                         <li><a href="#">Logout</a></li>
                     </ul>
                 </div>
